--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
+      - run: npm install
         working-directory: sample-packages/npm
       - run: npm publish
         working-directory: sample-packages/npm
