--- a/sample-packages/npm/package.json
+++ b/sample-packages/npm/package.json
@@ -1,4 +1,11 @@
 {
   "name": "test-publish-package",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "publishConfig": {
+  "registry":"https://npm.pkg.github.com"
+},
+    "repository": {
+    "type": "git",
+    "url": "https://github.com/markokoskinen/publish-package.git"
+  }
 }
