--- a/sample-packages/npm/package.json
+++ b/sample-packages/npm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-publish-package",
+  "name": "@markokoskinen/test-publish-package",
   "version": "1.0.0",
   "publishConfig": {
   "registry":"https://npm.pkg.github.com"
